# gesture-drumkit

./: .gitignore  README.md
AndroidApp/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
AndroidApp/app/: build.gradle
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/assets/: converted_model.tflite
AndroidApp/app/src/main/cpp/: DrumMachine.cpp  DrumMachine.h  DrumMachineConstants.h  native-lib.cpp
AndroidApp/app/src/main/cpp/audio/: AAssetDataSource.h  DataSource.h  Player.h  RenderableAudio.h
AndroidApp/app/src/main/java/com/cs4347/drumkit/: GenerateTrackActivity.kt  RecordingActivity.kt  StartingActivity.kt  TfliteTestActivity.kt
AndroidApp/app/src/main/java/com/cs4347/drumkit/gestures/: GestureRecognizer.kt  TfLiteModel.kt
AndroidApp/app/src/main/protobuf/: sensor.proto
AndroidApp/app/src/main/res/drawable/: ic_round_arrow_drop_up_24px.xml  ic_round_pause_circle_filled_24px.xml  ic_round_play_circle_filled_24px.xml  ic_round_record_24px.xml
AndroidApp/app/src/main/res/layout/: activity_generate_track.xml  activity_main.xml  activity_recording.xml  activity_test.xml  view_beat.xml  view_beat_extra_pad.xml  view_drumkit_instruments_view.xml  view_instrument_row.xml
AndroidApp/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
AndroidApp/app/src/main/res/xml/: accessoryservices.xml
AndroidApp/app_SAAgentV2/: build.gradle
AndroidApp/app_SAAgentV2/src/main/: AndroidManifest.xml
AndroidApp/app_SAAgentV2/src/main/protobuf/: sensor.proto
AndroidApp/app_SAAgentV2/src/main/res/layout/: activity_main.xml
AndroidApp/app_SAAgentV2/src/main/res/values/: strings.xml
AndroidApp/app_SAAgentV2/src/main/res/xml/: accessoryservices.xml
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
Model/: .gitignore  best_model.pkl  (+11 more)
(+2339 files in other folders)
